Extend service API