@@ -7,7 +7,6 @@ import lombok.Getter;
 
 import java.io.Serializable;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * @author sibmaks
@@ -18,18 +17,18 @@ import java.util.stream.Collectors;
 public class ServiceDto implements Serializable {
     private long serviceId;
     private String code;
-    private List<ServiceMockDto> serviceMockDtos;
+    private List<ServiceMockDto> mocks;
 
     public ServiceDto(ServiceEntity serviceEntity, List<HttpMockEntity> httpMockEntities) {
         this.serviceId = serviceEntity.getId();
         this.code = serviceEntity.getCode();
-        this.serviceMockDtos = httpMockEntities.stream()
+        this.mocks = httpMockEntities.stream()
                 .map(it -> ServiceMockDto.builder()
                         .mockId(it.getId())
                         .method(it.getMethod())
                         .pathRegex(it.getPathRegex())
                         .type(it.getType())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 }
